# battleship_c

./: CMakeLists.txt  README.md  ai.c  ai.h  board.c  board.h  main.c  save.c  save.h  ships.c  ships.h  type.h
